fix css z-index

--- a/public_html/vue/order/order-edit.css
+++ b/public_html/vue/order/order-edit.css
@@ -59,9 +59,6 @@
 .loading-overlay {
     z-index: 10000;
 }
-.dropdown-menu {
+.dropdown-form {
     z-index: 9999;
-}
-input.form-control {
-    z-index: 1;
 }
